@@ -3,6 +3,7 @@
 === 3.6 (Planned to 12.04.2016)
 * (Planned) use BrowserMobProxy to download files
 * Add method `$.screenshotAsImage()`: `BufferedImage elementScreenshot = $(".logo").screenshotAsImage();`
+* #321 set default page load strategy back to "normal"
 
 === 3.5.1 (Released 04.04.2016)
 * #309 method $$.shouldHave(size()) should not fail when timeout happens after the 1st check
